--- a/Project.toml
+++ b/Project.toml
@@ -7,8 +7,10 @@ version = "0.1.0"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 LoggingExtras = "e6f89c97-d47a-5376-807f-9c37f3926c36"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
 HDF5 = "0.17.2"
 Logging = "1.11.0"
 LoggingExtras = "1.1.0"
+Random = "1.11.0"
